Update to MC 1.21.2-4